Fixed the issue with alignment

--- a/src/pages/createstore/CreateStorePage.module.css
+++ b/src/pages/createstore/CreateStorePage.module.css
@@ -14,6 +14,7 @@
     left: 0;
     background-color: #BBB2DF;
     width: 200px;
+    margin-left:-1px;
     height: 70px;
     font-size: 25px;
     border-width: 0.5px;
@@ -28,6 +29,7 @@
     top: 0;
     left: 200px;
     border-radius:5px;
+    margin-left:-1px;
     background-color: #675D83;
     width: 200px;
     height: 70px;
