--- a/src/pages/login/LoginPage.module.css
+++ b/src/pages/login/LoginPage.module.css
@@ -1,5 +1,3 @@
-/* Example CSS for styling input elements */
-
 .inputBoxes {
     width: 200px;
     padding:10px;
@@ -8,13 +6,14 @@
     margin: 10px; /* Adjust the margin to create space around the input fields */
 }
 
-#topLeftLoginButton {
+.topLeftLoginButton {
     position: absolute;
     top: 0;
     left: 0;
     background-color: #675D83;
     width: 200px;
     height: 70px;
+    margin-left:-1px;
     font-size: 25px;
     border-width: 0.5px;
     font-weight: bold;
@@ -23,11 +22,12 @@
     border-radius:5px;
 }
 
-#topRightLoginButton {
+.topRightLoginButton {
     position: absolute;
     top: 0;
     left: 200px;
     border-radius:5px;
+    margin-left:-1px;
     background-color: #BBB2DF;
     width: 200px;
     height: 70px;
@@ -37,6 +37,13 @@
     font-size: 25px;
     font-weight: bold;
     color: white;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%; /* Occupy the full width of the container */
 }
 
 #loginbutton{
@@ -56,7 +63,7 @@
     width: 400px;
     height: 450px;
     background-color: #f0f0f0;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     border-radius:5px;
